k8s/prod/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: event-ticketing
  labels:
    app.kubernetes.io/name: redis-master
    app.kubernetes.io/part-of: event-ticketing
spec:
  type: ClusterIP
  selector:
    statefulset.kubernetes.io/pod-name: redis-node-1
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
